--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <script src="lib/angular.min.js"></script>
         <script src="lib/angular-route.js"></script>
         <script src="js/app.js"></script>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body ng-app="app" ng-controller="userCtrl">
         <div ng-view></div>
